--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Integral UI</title>
     <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="stylesheet" href="/CSS/nav.css">
 </head>
 <body>
     <div class="container">
         <nav>
             <div class="logo">
                 <a href="/index.html">Integral UI</a>
-                <h5>Your Component Buddy</h5>
+                <h5 class="heading-5">Your Component Buddy</h5>
             </div>
             
             <ul class="nav-menu">
@@ -21,6 +22,7 @@
                 <li> <a href="">Github</a></li>
                 <li> <a href="">Twitter</a></li>
             </ul>
+            
             <ul class="nav-menu-mobile">
                 <li> <a href="/docs.html"> Docs</a></li>
                 <li> <a href="">Github</a></li>
@@ -34,7 +36,7 @@
         </nav>
 
         <div class="hero">
-            <h1 class="hero-heading">
+            <h1 class=" heading-1 hero-heading">
                 Work Like Never Before
             </h1>
             <p class="hero-para">
