fea: added alert and button component
shifted the previous css of button element to button.css . and minute chnages around buttons using in landing page.

--- a/docs.html
+++ b/docs.html
@@ -51,7 +51,7 @@
                             <li><a href="/Component/Avatar/avatar.html" target="iframe">Avatar</a></li>
                             <li><a class="active" href="/Component/Badge/badge.html" target="iframe">Badge</a></li>
                             <li><a href="/Component/Alert/alert.html" target="iframe">Alert</a></li>
-                            <li><a href="#" target="iframe">Button</a></li>
+                            <li><a href="/Component/button/button.html" target="iframe">Button</a></li>
                             <li><a href="#" target="iframe">Card</a></li>
                             <li><a href="#" target="iframe">Image</a> </li>
                             <li><a href="#" target="iframe">Input</a></li>
