--- a/docs.html
+++ b/docs.html
@@ -52,7 +52,7 @@
                             <li><a class="active" href="/Component/Badge/badge.html" target="iframe">Badge</a></li>
                             <li><a href="/Component/Alert/alert.html" target="iframe">Alert</a></li>
                             <li><a href="/Component/button/button.html" target="iframe">Button</a></li>
-                            <li><a href="#" target="iframe">Card</a></li>
+                            <li><a href="/Component/cards/cards.html" target="iframe">Card</a></li>
                             <li><a href="#" target="iframe">Image</a> </li>
                             <li><a href="#" target="iframe">Input</a></li>
                             <li><a href="#" target="iframe">Input</a></li>
