fea: added image component

--- a/docs.html
+++ b/docs.html
@@ -53,7 +53,7 @@
                             <li><a href="/Component/Alert/alert.html" target="iframe">Alert</a></li>
                             <li><a href="/Component/button/button.html" target="iframe">Button</a></li>
                             <li><a href="/Component/cards/cards.html" target="iframe">Card</a></li>
-                            <li><a href="#" target="iframe">Image</a> </li>
+                            <li><a href="/Component/Image/image.html" target="iframe">Image</a> </li>
                             <li><a href="#" target="iframe">Input</a></li>
                             <li><a href="#" target="iframe">Input</a></li>
                             <li><a href="#" target="iframe">Input</a></li>
