fea: added input component

--- a/docs.html
+++ b/docs.html
@@ -54,7 +54,7 @@
                             <li><a href="/Component/button/button.html" target="iframe">Button</a></li>
                             <li><a href="/Component/cards/cards.html" target="iframe">Card</a></li>
                             <li><a href="/Component/Image/image.html" target="iframe">Image</a> </li>
-                            <li><a href="#" target="iframe">Input</a></li>
+                            <li><a href="/Component/Input/input.html" target="iframe">Input</a></li>
                             <li><a href="#" target="iframe">Input</a></li>
                             <li><a href="#" target="iframe">Input</a></li>
                             <li><a href="#" target="iframe">Input</a></li>
