fea: added text utilities and moved the text related css from other components to text utilities

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="logo">
                 <a href="/index.html">Integral UI</a>
-                <h5 class="heading-5">Your Component Buddy</h5>
+                <h5>Your Component Buddy</h5>
             </div>
             
             <ul class="nav-menu">
