--- a/docs.html
+++ b/docs.html
@@ -13,7 +13,7 @@
             <nav>
                 <div class="logo">
                     <a href="/index.html">Integral UI</a>
-                    <h5 class="heading-5">Your Component Buddy</h5>
+                    <h5>Your Component Buddy</h5>
                 </div>
     
                 <ul class="nav-menu">
@@ -32,11 +32,11 @@
                         <h2 class="heading-2"><a href="">Get Started</a></h2>
                         <hr>
 
-                        <ul >
+                        <ul class="side-bar-list" >
 
                             <li><a href="/index.html" target="iframe">Quick Start</a></li>
                             <li><a href="/index.html" target="iframe">Theme Colors</a></li>
-                            <li><a href="/index.html" target="iframe">Typography</a></li>
+                            <li><a href="/Component/Text-Utilies/text-utilities.html" target="iframe">Text Utilities</a></li>
                         </ul>
                     </div>
     
@@ -46,7 +46,7 @@
                         <h2 class="heading-2"><a href="#">Components</a> </h2>
                         <hr>
 
-                        <ul >
+                        <ul class="side-bar-list">
 
                             <li><a href="/Component/Avatar/avatar.html" target="iframe">Avatar</a></li>
                             <li><a class="active" href="/Component/Badge/badge.html" target="iframe">Badge</a></li>
@@ -55,11 +55,11 @@
                             <li><a href="/Component/cards/cards.html" target="iframe">Card</a></li>
                             <li><a href="/Component/Image/image.html" target="iframe">Image</a> </li>
                             <li><a href="/Component/Input/input.html" target="iframe">Input</a></li>
-                            <li><a href="#" target="iframe">Input</a></li>
-                            <li><a href="#" target="iframe">Input</a></li>
-                            <li><a href="#" target="iframe">Input</a></li>
-                            <li><a href="#" target="iframe">Input</a></li>
-                            <li><a href="#" target="iframe">Input</a></li>
+                            <li><a href="#" target="iframe">lorem</a></li>
+                            <li><a href="#" target="iframe">lorem</a></li>
+                            <li><a href="#" target="iframe">lorem</a></li>
+                            <li><a href="#" target="iframe">lorem</a></li>
+                            <li><a href="#" target="iframe">lorem</a></li>
                         </ul>
                     </div>
                 </div>
