--- a/docs.html
+++ b/docs.html
@@ -55,7 +55,7 @@
                             <li class="list "><a class="link" href="/Component/cards/cards.html" target="iframe">Card</a></li>
                             <li class="list "><a class="link" href="/Component/Image/image.html" target="iframe">Image</a> </li>
                             <li class="list "><a class="link" href="/Component/Input/input.html" target="iframe">Input</a></li>
-                            <li class="list "><a class="link" href="#" target="iframe">lorem</a></li>
+                            <li class="list "><a class="link" href="/Component/List/list.html" target="iframe">List</a></li>
                             <li class="list "><a class="link" href="#" target="iframe">lorem</a></li>
                             <li class="list "><a class="link" href="#" target="iframe">lorem</a></li>
                             <li class="list "><a class="link" href="#" target="iframe">lorem</a></li>
