refactor: updated document page with links

--- a/docs.html
+++ b/docs.html
@@ -56,10 +56,9 @@
                              <li class="list"><a class="link" href="/Component/Image/image.html" target="iframe">Image</a> </li>
                              <li class="list"><a class="link" href="/Component/Input/input.html" target="iframe">Input</a></li>
                              <li class="list"><a class="link" href="/Component/List/list.html" target="iframe">List</a></li>
-                             <li class="list"><a class="link" href="#" target="iframe">Input</a></li>
-                             <li class="list"><a class="link" href="#" target="iframe">Input</a></li>
-                             <li class="list"><a class="link" href="#" target="iframe">Input</a></li>
-                             <li class="list"><a class="link" href="#" target="iframe">Input</a></li>
+                             <li class="list"><a class="link" href="/Component/Snackbar/snackbar.html" target="iframe">Snackbar</a></li>
+                             <li class="list"><a class="link" href="/Component/Ratings/ratings.html" target="iframe">Ratings</a></li>
+
                         </ul>
                     </div>
                 </div>
