refactor: Updated the links and docs.
Completed the project by covering all remaining documentation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             
             <ul class="nav-menu-mobile">
                 <li> <a class="link" href="/docs.html"> Docs</a></li>
-                <li> <a class="link" href="">Github</a></li>
+                <li> <a class="link" href="https://github.com/nshanbhag20001412/Component-Library">Twitter</a></li>
+                <li> <a class="link" href="https://twitter.com/NehaShanbhag14">Github</a></li>
                 <li> <a class="link" href="">Twitter</a></li>
                 <i class="fas fa-times fa-fw fa-2x close-icon"></i>
             </ul>
@@ -40,8 +41,8 @@
             <h1 class=" heading-1 hero-heading">
                 Work Like Never Before
             </h1>
-            <p class=" para hero-para">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque dolor est quis. Atque itaque, fuga, doloribus modi rerum fugiat, repellat dolor reprehenderit ut voluptatibus voluptas accusamus quisquam dolore id! At.
+            <p class="hero-para">
+               A Component Library based on pure HTML CSS and vanilla JS to built your app faster. Creating a app is as easy as pick and drop. Within a matter a few minutes your components are ready to go!
             </p>
             
             <div class="hero-buttons">
