refactor: moved links from css files to html
importing css linkinto css files was creating a mess to moved these links to respective html files

--- a/docs.html
+++ b/docs.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Integral UI</title>
         <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
+         <link rel="stylesheet" href="/CSS/nav.css">
          <link rel="stylesheet" href="/CSS/docs.css">
     </head>
     <body>
@@ -64,7 +66,7 @@
                 </div>
 
                 <div class="main-content">
-                   <iframe src="/Get Started/getstarted.html" class="document-frame" name="iframe"></iframe>
+                   <iframe src="/Get Started/getstarted.html" class="document-frame" id="frame1" name="iframe"></iframe>
                 </div>
         </div>
     
