--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integral UI</title>
     <script src="https://kit.fontawesome.com/0ce6b5a07c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="stylesheet" href="/Component/Text-Utilies/text-utilities.css">
     <link rel="stylesheet" href="/CSS/nav.css">
     <link rel="stylesheet" href="Component/button/button.css">
+    <link rel="stylesheet" href="/CSS/main.css">
+
 </head>
 <body>
     <div class="container">
