docs and refactor: changes in the textual error and some css

--- a/Get Started/getstarted.html
+++ b/Get Started/getstarted.html
@@ -41,19 +41,19 @@
               <span >Primary Color<br>var(--primary)</span>
             </div>
             <div class=" theme-color-block off-white"  >
-                <span >Off White <br>var(--primary)</span>
+                <span >Off White <br>var( --off-white)</span>
             </div>
             <div class=" theme-color-block error">
-                <span >Error color<br>var(--primary)</span>
+                <span >Error color<br>var(--error)</span>
             </div>
             <div class=" theme-color-block warning">
-                <span >Warning Color<br>var(--primary)</span>
+                <span >Warning Color<br>var(--warning)</span>
             </div>
             <div class=" theme-color-block success">
-                <span >Success color<br>var(--primary)</span>
+                <span >Success color<br>var(--success)</span>
             </div>
             <div class=" theme-color-block blue">
-                <span >Blue color<br>var(--primary)</span>
+                <span >Blue color<br>var(--blue)</span>
             </div>
             <div class=" theme-color-block black">
                 <span >Black color<br>var(--black)</span>
